examples/test/testpolicy6503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6503
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key38: value33
      key36: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value21
          key48: value8
      podSelector:
        matchLabels:
          key18: value48
          key48: value29
          key25: value24
